Kubernetes/ingress/prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /canary
        backend:
          service:
            name: production
            port:
              number: 80
